--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
+  "id": "/magic-8-ball/",
   "name": "Magic 8-Ball",
   "short_name": "8-Ball",
   "description": "A fun Magic 8-Ball application that works offline.",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#111827",
@@ -10,12 +12,14 @@
     {
       "src": "icons/icon-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
       "src": "icons/icon-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ]
 }
